Fix wrap content for Personal characteristics

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ h1{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 .footer{
     padding-top: 20px;
